# Yihuai-s-master-thesis-about-RL-for-swarm-robots

./: .gitignore  README.md  eval_rollout.py  evaluate.py  gen_nb.py  pyproject.toml  render_video.py  train.py  visualize.py
SecondPhase/: readme.md  train.py  triangle_fill.py
VMAS/: README.md
configs/: v10.yaml  v24a_target_assignment.yaml  v25a_no_target_obs.yaml  v6.yaml  v7.yaml  v8.yaml  v9.yaml
models/: __init__.py  actor.py
runs/triangle_fill/: config.json  resume.json
runs/triangle_fill_lock2_from_9000/: analysis.ipynb  config.json  resume.json
runs/triangle_fill_lock_from_8100/: config.json  resume.json
scenarios/: __init__.py  triangle_fill.py
tests/: test_credit_assignment_snr.py  test_lattice_reward.py  test_row_loss_direction.py
utils/: __init__.py  vmas_collision_patch.py
utils/triangle_reward/: __init__.py  geometry.py  lattice.py  losses.py  sinkhorn.py  template.py
